5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1734_2496.log
== TEST (2019-05-16 02:17:18) 
-- CODE:
x = int(input("numero"))
y = 0
while (x != -1):
	y = y+x
	x = int(input("numero"))\
print(y)
-- ERROR:
File "XXXX", line 6
    print(y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 02:17:54) 
-- CODE:
x = int(input("numero"))
y = 0
while (x != -1):
	y = y+x
	x = int(input("numero"))\
print (y)
-- ERROR:
File "XXXX", line 6
    print (y)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 02:18:45) 
-- CODE:
x = int(input("numero"))
y = 0
while (x != -1):
	y = y+x
	x = int(input("numero"))
print (y)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 02:18:56) 
-- CODE:
x = int(input("numero"))
y = 0
while (x != -1):
	y = y+x
	x = int(input("numero"))
print (y)
-- EXECUTION TIME:
0.122541
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
